--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     form.addEventListener("submit", function (e) {
       e.preventDefault();
       if (input.value) {
-        socket.emit("chat message", input.value);
+        socket.emit("chatMessage", input.value);
         input.value = "";
       }
     });
